--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "framer-motion": "^12.26.2",
     "react": "^19.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0"
   },
